# saytshen-haskell

./: README.md  saytshen.cabal
examples/: amazon-2016090.yml
src/lib/: Scan.hs  scan.hs
test/: main.hs
